--- a/maddie.html
+++ b/maddie.html
@@ -2,20 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practicing Transitions</title>
+    <title>Squirrel!</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="color1"> 
-    <p> Color change </p>   
-    </div>
-    
-    <div class="opacity1"> 
-    <p> Opacity change </p>   
-    </div>
-    
-    <div class="size1"> 
-    <p> Size change </p>   
-    </div>
+  
 </body>
 </html>
