--- a/wade.html
+++ b/wade.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div>
-      <div id="banner">
+      <div class="banner">
         <img
           src="/sleuthimage.png"
           alt="Feline Sleuth Network Logo"
