--- a/maddie.html
+++ b/maddie.html
@@ -4,17 +4,22 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pawfessional Enterprises!</title>
+        <link rel="stylesheet" href="maddie.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="Title">
             <h2> Office of Mischievousness</h2></div>
     
     <div class="column2">
-       
+       <img src="Darlene.png" alt="A single mom who works 2 jobs">
+
         <p>Meet Darlene, the dynamic squirrel who wears many hats as the Chief Executive Mischief Manager. With boundless energy and a knack for organization, Darlene leads her squirrel community with wit and charm. From orchestrating acorn heists to coordinating treehouse renovations, there’s never a dull moment with Darlene at the helm. With her bushy tail and sharp mind, she’s the epitome of resourcefulness and agility in the forest.
         </p>
         <h2> Resume</h2> 
-        <div class="x">
+        <div class="resume">
     <p> SQUIRREL RESUME IN HERE
     </p>
         </div>
