--- a/wade.html
+++ b/wade.html
@@ -24,7 +24,7 @@
         <p>Is your dog really a <em>good boy</em>?</p>
         <p>Wondering who left that 💩 in your mailbox?</p>
         <p>Our cat-cloak operatives are up for the chase and ready to go on the prowl for clues to find the answers!</p>
-        <p><em>Disclaimer: Feline Sleuth Network is not liable for any physical or emotional damages sustained during covert operations.
+        <p><em>Disclaimer: Feline Sleuth Network is not liable for any physical, financial, or emotional damages sustained during covert operations.
           <br>
           This includes but is not limited to: scratches, bites, and the occasional hairball.
         </em></p>
