--- a/maddie.html
+++ b/maddie.html
@@ -39,7 +39,7 @@
     <h2> Meet the rest of the team! </h2>
     <div class="layout3">
 
-        <img src="INSERTIMAGE" 
+        <img src="chaz.png"
         alt="Squirrel" 
         width="400px">
         
