--- a/wade.html
+++ b/wade.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
       href="/wade.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Oswald:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div>
@@ -23,23 +27,35 @@
         <h2>What we do</h2>
         <p>Is your dog really a <em>good boy</em>?</p>
         <p>Wondering who left that 💩 in your mailbox?</p>
-        <p>Our cat-cloak operatives are up for the chase and ready to go on the prowl for clues to find the answers!</p>
-        <p><em>Disclaimer: Feline Sleuth Network is not liable for any physical, financial, or emotional damages sustained during covert operations.
-          <br>
-          This includes but is not limited to: scratches, bites, and the occasional hairball.
-        </em></p>
+        <p>
+          Our cat-cloak operatives are up for the chase and ready to go on the
+          prowl for clues to find the answers!
+        </p>
+        <p>
+          <em
+            >Disclaimer: Feline Sleuth Network is not liable for any physical,
+            financial, or emotional damages sustained during covert operations.
+            <br />
+            This includes but is not limited to: scratches, bites, and the
+            occasional hairball.
+          </em>
+        </p>
       </div>
       <div id="Testimonials">
         <h2>Testimonials</h2>
         <div id="test1">
-          <img src="" alt="">
-          <p>“I found out my husband was cheating with the neighbor. The one that runs the Feline Sleuth Network. I want my f***ing money back!”
-            <br>
+          <img
+            src=""
+            alt="Avatar of a satisfied customer"
+          />
+          <p>
+            “I found out my husband was cheating with the neighbor. The one that
+            runs the Feline Sleuth Network. I want my f***ing money back!”
+            <br />
             - Satisfied customer
           </p>
         </div>
         <div id="test2"></div>
-        </div>
       </div>
       <div id="Contact">
         <h2>Contact us</h2>
