Added some more content

--- a/wade.html
+++ b/wade.html
@@ -23,6 +23,12 @@
           alt="Feline Sleuth Network Logo"
         />
       </div>
+      <div class="hero">
+        <img
+          src="./DALLECatImage.webp"
+          alt="hero image of cat detective spying on cheating husband"
+        />
+      </div>
       <div id="about">
         <h2>What we do</h2>
         <p>Is your dog really a <em>good boy</em>?</p>
@@ -32,33 +38,50 @@
           prowl for clues to find the answers!
         </p>
         <p>
-          <em
+          <div id="disclaimer">
+            <em
             >Disclaimer: Feline Sleuth Network is not liable for any physical,
             financial, or emotional damages sustained during covert operations.
             <br />
             This includes but is not limited to: scratches, bites, and the
             occasional hairball.
           </em>
+          </div>
+    
         </p>
       </div>
       <div id="Testimonials">
         <h2>Testimonials</h2>
         <div id="test1">
           <img
-            src=""
+            src="satisfiedcustomer1.png"
             alt="Avatar of a satisfied customer"
           />
           <p>
             “I found out my husband was cheating with the neighbor. The one that
             runs the Feline Sleuth Network. I want my f***ing money back!”
             <br />
-            - Satisfied customer
+            - <em>Satisfied customer</em>
           </p>
         </div>
         <div id="test2"></div>
       </div>
       <div id="Contact">
         <h2>Contact us</h2>
+        <p>For inquiries, please contact our Chief Meow Officer:</p>
+        <ul style="list-style-type: none">
+          <li>Name: Mr. Whiskers</li>
+          <li>
+            Email:
+            <a href="'mailto:meow@felinesleuthnetwork.com"
+              >meow@felinesleuthnetwork.com</a
+            >
+          </li>
+          <li>Phone: 1-800-MEOW-MEOW</li>
+        </ul>
+        <p>
+          Please note that Mr. Whiskers is only available for contact outside of his daily nap times.
+        </p>
       </div>
     </div>
   </body>
