--- a/maddie.html
+++ b/maddie.html
@@ -9,13 +9,16 @@
          </head>
          <body>
 <h2> From the Office of Mischievousness</h2>
-    <img src="Squirrels/Darlene.png" alt="A single mom who works 2 jobs">
+   <div class="top">
+    <img src="Squirrels/Darlene.png" alt="A single mom who works 2 jobs"
+    width="400px">
         
     <div class="style1">
          <p>Meet Darlene, the dynamic squirrel who wears many hats as the Chief Executive Mischief Manager. With boundless energy and a knack for organization, Darlene leads her squirrel community with wit and charm. From orchestrating acorn heists to coordinating treehouse renovations, there’s never a dull moment with Darlene at the helm. With her bushy tail and sharp mind, she’s the epitome of resourcefulness and agility in the forest.
         </p> 
     </div>
-  
+   </div>
+
     <h2> Education</h2> 
         <p>
             Bachelor of Nutology
@@ -24,6 +27,7 @@
                 
                 Specialization in Acorn Procurement and Tree Climbing
                 GPA: 3.8 </p>
+
     <h2> Experience</h2> 
                <p>
                 Tree Ninja, Acorn Enterprises, Nutsville
