--- a/ross.html
+++ b/ross.html
@@ -3,8 +3,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="ross.css">
 </head>
 <body>
-    
+
+<h1>CAPYBARA HOT SPRINGS</h1>
+
+    <div class="capybara">
+    <img src="capys/Capy1_copy.png" alt="capy">
+</div>
 </body>
 </html>
