--- a/index.html
+++ b/index.html
@@ -1,74 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <title>Pawfessional Enterprises</title>
-    <link
-      rel="stylesheet"
-      href="styles.css"
-    />
-    <link
-      rel="preconnect"
-      href="https://fonts.googleapis.com"
-    />
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Oswald:wght@200..700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="nav-container">
-      <nav class="navbar">
-        <h1 id="navbar-logo">Test</h1>
-        <div
-          class="menu-toggle"
-          id="mobile-menu"
-        >
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
-        <ul class="nav-menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Services</a></li>
-          <li>
-            <a
-              href="#"
-              class="nav-btn"
-              >Sign Up</a
-            >
-          </li>
-        </ul>
-      </nav>
-    </div>
-
-    <div class="main">
-      <div class="main-container">
-        <div class="main-content">
-          <h1></h1>
-          <p></p>
-          <button class="btn"><a href="#">Get Started</a></button>
-        </div>
-        <div class="main-img-container">
-          <img
-            src=""
-            alt=""
-            id="main-img"
-          />
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pawfessional Enterprises</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Oswald:wght@200..700&display=swap" rel="stylesheet" />
+</head>
+<body>
+  <div class="nav-container">
+    <nav class="navbar">
+      <h1 id="navbar-logo">PawE</h1>
+      <div class="menu-toggle" id="mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+      <ul class="nav-menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#" class="nav-btn">Sign Up</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="main">
+    <div class="main-container">
+      <div class="main-content">
+        <h1>Call in the Pawfessionals!</h1>
+        <h2>Pawsitively Pawfect Services</h2>
+        <p></p>
+        <button class="btn"><a href="#">Get Started</a></button>
+      </div>
+      <div class="main-img-container">
+        <img src="/cat.png" alt="cat with bowtie" id="main-img" width="700px"/>
       </div>
     </div>
-    <script src="app.js"></script>
-  </body>
+  </div>
+  <script src="app.js"></script>
+</body>
+<footer>
+
+</footer>
 </html>
