--- a/wade.html
+++ b/wade.html
@@ -31,26 +31,25 @@
       </div>
       <div id="about">
         <h2>What we do</h2>
-        <p>Is your dog really a <em>good boy</em>?</p>
-        <p>Wondering who left that 💩 in your mailbox?</p>
-        <p>
-          Our cat-cloak operatives are up for the chase and ready to go on the
-          prowl for clues to find the answers!
-        </p>
-        <p>
-          <div id="disclaimer">
-            <em
+        <div id="about-content">
+          <p>Is your dog really a <em>good boy</em>?</p>
+          <p>Wondering who left that 💩 in your mailbox?</p>
+          <p>
+            Our cat-cloak operatives are up for the chase and ready to go on the
+            prowl for clues to find the answers!
+          </p>
+        </div>
+        <div id="disclaimer">
+          <em
             >Disclaimer: Feline Sleuth Network is not liable for any physical,
             financial, or emotional damages sustained during covert operations.
             <br />
             This includes but is not limited to: scratches, bites, and the
             occasional hairball.
           </em>
-          </div>
-    
-        </p>
+        </div>
       </div>
-      <div id="Testimonials">
+      <div class="testimonials">
         <h2>Testimonials</h2>
         <div id="test1">
           <img
@@ -66,7 +65,7 @@
         </div>
         <div id="test2"></div>
       </div>
-      <div id="Contact">
+      <div class="Contact">
         <h2>Contact us</h2>
         <p>For inquiries, please contact our Chief Meow Officer:</p>
         <ul style="list-style-type: none">
@@ -80,7 +79,8 @@
           <li>Phone: 1-800-MEOW-MEOW</li>
         </ul>
         <p>
-          Please note that Mr. Whiskers is only available for contact outside of his daily nap times.
+          Please note that Mr. Whiskers is only available for contact outside of
+          his daily nap times.
         </p>
       </div>
     </div>
