--- a/wade.html
+++ b/wade.html
@@ -29,7 +29,7 @@
           alt="hero image of cat detective spying on cheating husband"
         />
       </div>
-      <div id="about">
+      <div class="about">
         <h2>What we do</h2>
         <div id="about-content">
           <p>Is your dog really a <em>good boy</em>?</p>
@@ -65,7 +65,7 @@
         </div>
         <div id="test2"></div>
       </div>
-      <div class="Contact">
+      <div class="contact">
         <h2>Contact us</h2>
         <p>For inquiries, please contact our Chief Meow Officer:</p>
         <ul style="list-style-type: none">
