--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       </div>
       <ul class="nav-menu">
         <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Services</a></li>
+        <li><a href="#">Admin</a></li>
+        <li><a href="#">Sleuth</a></li>
+        <li><a href="#">Lucky</a></li>
         <li><a href="#" class="nav-btn">Sign Up</a></li>
       </ul>
     </nav>
@@ -37,6 +37,28 @@
       </div>
       <div class="main-img-container">
         <img src="/cat.png" alt="cat with bowtie" id="main-img" width="700px"/>
+      </div>
+      <div class="testimonials-container">
+        <div class="testimonials">
+          <img src="/0.png" alt="">
+          <p>"Who needs Sherlock Holmes when you've got Purr-lock Holmes on the case? This feline detective always lands on his paws and solves crimes with purr-fect precision! When my prized fish went missing, I turned to Detective Purr-lock Holmes for help. With a flick of his tail and a keen sense of smell, he cracked the case wide open. Turns out, Fluffy was the culprit all along! Thanks to Detective Purr-lock, my fish are safe, and Fluffy is on house arrest. Meow-sterpiece of a job!"</p>
+          <p class="customer">Timothy P., Fish Aficionado and Fluffy's Owner</p>
+        </div>
+        <div class="testimonials">
+          <img src="/1.png" alt="">
+          <p>"I never thought I'd say this, but my squirrel secretary, Nutmeg, has revolutionized my work life! With her lightning-fast typing skills and unparalleled organization, Nutmeg keeps my schedule nutty yet efficient. Thanks to Pawfessional Enterprises, I've never been more productive. Who knew squirrels had such a knack for administrative tasks?</p>
+          <p class="customer">Harold G., Nutty Professor and Squirrel Secretary Supporter</p>
+        </div>
+        <div class="testimonials">
+          <img src="/2.png" alt="">
+          <p>"Talk about luxury! My trip to the Capybara Spa was like a dream come true. From the moment I waddled in, I was greeted with warm smiles and gentle nibbles. The relaxation package, complete with mud baths and aquatic massages, left me feeling rejuvenated and refreshed. Who knew a giant rodent could provide such pampering? Count me in for another round of capybara bliss!"</p>
+          <p class="customer">Lily W., Spa Enthusiast and Capybara Connoisseur</p>
+        </div>
+          <div class="testimonials">
+            <img src="/3.png" alt="">
+            <p>Who knew that hiring a dog for odd jobs could be so paw-some? Lucky from Pawfessional Enterprises is more than just a furry helper; he's my lucky charm on four legs! Seriously, ever since Lucky joined the team, it's like the universe has aligned in my favor. Need a smile? Lucky's got a wag for that. Can't find your keys? Lucky's nose knows. I swear, this pup has more luck in his tail than a leprechaun in a pot of gold. Thanks to Pawfessional Enterprises, I've got a canine companion on call who's not just lucky—he's the tail-wagging hero I never knew I needed!"</p>
+            <p class="customer">Amanda S., Lucky's Biggest Fan and Believer in Canine Luck</p>
+          </div>
       </div>
     </div>
   </div>
