--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
   <body>
     <div class="nav-container">
       <nav class="navbar">
-        <h1 id="navbar-logo">PawE</h1>
+        <h1 id="navbar-logo">
+          <img
+            src="PAW.png"
+            alt="Pawfessional Logo"
+            width="95px"
+          />
+        </h1>
         <div
           class="menu-toggle"
           id="mobile-menu"
