final commit for Sleuth page

--- a/wade.html
+++ b/wade.html
@@ -23,37 +23,31 @@
   <body>
     <div class="nav-container">
       <nav class="navbar">
-          <h1 id="navbar-logo">
-            <a href="index.html">
-              <img
-                src="PAW.png"
-                alt="Pawfessional Logo"
-                width="95px"
-              />
-            </a>
-          </h1>
-          <div
-            class="menu-toggle"
-            id="mobile-menu"
-          >
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </div>
-          <ul class="nav-menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="maddie.html">Admin</a></li>
-            <li><a href="wade.html">Sleuth</a></li>
-            <li><a href="wendy.html">Lucky</a></li>
-            <li>
-              <a
-                href="#"
-                class="nav-btn"
-                >Sign Up</a
-              >
-            </li>
-          </ul>
-        </nav>
+        <h1 id="navbar-logo">
+          <a href="index.html">
+            <img
+              src="PAW.png"
+              alt="Pawfessional Logo"
+              width="95px"
+            />
+          </a>
+        </h1>
+        <div
+          class="menu-toggle"
+          id="mobile-menu"
+        >
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+        <ul class="nav-menu">
+          <li><a href="maddie.html">Admin</a></li>
+          <li><a href="wade.html">Sleuth</a></li>
+          <li><a href="ross.html">Ross</a></li>
+          <li><a href="wendy.html">Lucky</a></li>
+          <li><a href="Ana.html">Chef Sardine</a></li>
+        </ul>
+      </nav>
     </div>
     <div class="main">
       <div class="banner">
