--- a/ross.html
+++ b/ross.html
@@ -8,10 +8,39 @@
 </head>
 <body>
 
-<h1>CAPYBARA HOT SPRINGS</h1>
+<h1 class="styleA">CAPYBARA HOT SPRINGS</h1>
 
     <div class="capybara">
     <img src="capys/Capy1_copy.png" alt="capy">
+</div>
+
+<div class="styleA">
+    <p>
+        Welcome To The Capybara Hot Springs, Full on Relaxation
+        </p>
+    </div>
+
+<h2> Unique Experiences Include</h2> 
+   
+ <div class="bullet">
+ <li> Walk among the capybaras and pet them </li> 
+ <br>
+ <li> Watch capybara soak in an all natural hot spring </li> 
+ <br>
+<li> Check out our exclusive merchandise </li>
+<br>
+<li> Add various fruits to the capybara hot springs and watch em them eat </li>
+ </div>         
+ <div class="capybaras">
+
+    <img src="/capys/Capy2.png" alt="capybara"  width="100px">
+    
+    <img src="capys/Capy3.png"   alt="Capybara"  width="150px">
+
+    <img src="capys/Capy4.png" alt="Capybara" width="180px">
+
+    <img src="capys/Capy5.png" alt="Capybara"width="150px">
+
 </div>
 </body>
 </html>
