--- a/ross.html
+++ b/ross.html
@@ -30,6 +30,7 @@
 <li> Check out our exclusive merchandise </li>
 <br>
 <li> Add various fruits to the capybara hot springs and watch em them eat </li>
+<br>
  </div>         
  <div class="capybaras">
 
@@ -41,6 +42,11 @@
 
     <img src="capys/Capy5.png" alt="Capybara"width="150px">
 
+</div>
+<div class="CI">
+<h3> Contact Info</h3>
+<p> Email: CapybaraHS@tokyo.com</p>
+<p> Phone#: 555-555-7171</p>
 </div>
 </body>
 </html>
