--- a/ross.html
+++ b/ross.html
@@ -29,7 +29,7 @@
  <br>
 <li> Check out our exclusive merchandise </li>
 <br>
-<li> Add various fruits to the capybara hot springs and watch em them eat </li>
+<li> Add various fruits to the capybara hot springs and watch them feast </li>
 <br>
  </div>         
  <div class="capybaras">
@@ -42,6 +42,11 @@
 
     <img src="capys/Capy5.png" alt="Capybara"width="150px">
 
+    <img src="capys/Capy3_copy.png" alt="Capybara"width="150px">
+
+    <img src="capys/Capy4_copy.png" alt="Capybara" width="200px">
+
+    
 </div>
 <div class="CI">
 <h3> Contact Info</h3>
