updated link to Hot Springs

--- a/wade.html
+++ b/wade.html
@@ -41,11 +41,11 @@
           <span class="bar"></span>
         </div>
         <ul class="nav-menu">
-          <li><a href="maddie.html">Admin</a></li>
-          <li><a href="wade.html">Sleuth</a></li>
-          <li><a href="ross.html">Ross</a></li>
           <li><a href="wendy.html">Lucky</a></li>
+          <li><a href="wade.html">Sleuth</a></li>
+          <li><a href="ross.html">Hot Springs</a></li>
           <li><a href="Ana.html">Chef Sardine</a></li>
+          <li><a href="maddie.html">Admin</a></li>
         </ul>
       </nav>
     </div>
