--- a/maddie.html
+++ b/maddie.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pawfessional Enterprises!</title>
         <link rel="stylesheet" href="maddie.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
     </head>
     <body>
     
@@ -16,20 +17,18 @@
     <img src="Squirrels/Darlene.png" 
       alt="A single mom who works 2 jobs" height="25%">
         <article>
-          <h1>Meet Darlene!</h1>
+          <h2>Meet Darlene!</h2>
         <p>Darlene; the dynamic squirrel who wears many hats as the Chief Executive Mischief Manager of Pawfessional Enterprises. With boundless energy and a knack for organization, Darlene leads her team with wit and charm. From orchestrating acorn heists to coordinating treehouse renovations, there’s never a dull moment with Darlene at the helm. With her bushy tail and sharp mind, she’s the epitome of resourcefulness and agility in the forest.</p>
-    <h2> Education</h2> 
+    <h3> Education</h3> 
         <p> Bachelor of Nutology
                 Nutsville University, 
                 Nutsville</p>
                 <p>
                 Specialization in Acorn Procurement and Tree Climbing
                 GPA: 3.8 </p>
-
-<h2> Experience</h2> 
-               <p>
-                Tree Ninja, Acorn Enterprises, Nutsville
-                art of stealthily acquiring acorns from neighboring trees.
+    <h3> Experience</h3> 
+    <p>Tree Ninja, Acorn Enterprises, Nutsville
+       art of stealthily acquiring acorns from neighboring trees.
                 Implemented innovative techniques to bypass bird feeders and squirrel-proof birdhouses.
                 Led a team of fellow squirrels in raiding picnics and stealing snacks from unsuspecting park-goers.</p>
                 <p>
