--- a/ross.html
+++ b/ross.html
@@ -7,7 +7,34 @@
     <link rel="stylesheet" href="ross.css">
 </head>
 <body>
-
+    <div class="nav-container">
+        <nav class="navbar">
+          <h1 id="navbar-logo">
+            <a href="index.html">
+              <img
+                src="PAW.png"
+                alt="Pawfessional Logo"
+                width="95px"
+              />
+            </a>
+          </h1>
+          <div
+            class="menu-toggle"
+            id="mobile-menu"
+          >
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
+          <ul class="nav-menu">
+            <li><a href="wendy.html">Lucky</a></li>
+            <li><a href="wade.html">Sleuth</a></li>
+            <li><a href="ross.html">Hot Springs</a></li>
+            <li><a href="Ana.html">Chef Sardine</a></li>
+            <li><a href="maddie.html">Admin</a></li>
+          </ul>
+        </nav>
+      </div>
 <h1 class="styleA">CAPYBARA HOT SPRINGS</h1>
 
     <div class="capybara">
@@ -33,6 +60,18 @@
 <br>
  </div>         
  <div class="capybaras">
+
+    <img src="/capys/Capy2.png" alt="capybara"  width="100px">
+    
+    <img src="capys/Capy3.png"   alt="Capybara"  width="150px">
+
+    <img src="capys/Capy4.png" alt="Capybara" width="180px">
+
+    <img src="capys/Capy5.png" alt="Capybara"width="150px">
+
+    <img src="capys/Capy3_copy.png" alt="Capybara"width="150px">
+
+    <img src="capys/Capy4_copy.png" alt="Capybara" width="200px">
 
     <img src="/capys/Capy2.png" alt="capybara"  width="100px">
     
