--- a/ross.html
+++ b/ross.html
@@ -38,6 +38,8 @@
 <h1 class="styleA">CAPYBARA HOT SPRINGS</h1>
 
     <div class="capybara">
+    
+    <img src="capys/Capy1.png" alt="capy">
     <img src="capys/Capy1_copy.png" alt="capy">
 </div>
 
