updated page with Wade's last update May 13th

--- a/Ana.html
+++ b/Ana.html
@@ -15,25 +15,32 @@
 <body>
     <div class="nav-container">
         <nav class="navbar">
-            <h1 id="navbar-logo">
-                <img src="PAW.png" alt="Pawfessional Logo" width="95px" />
-            </h1>
-            <div class="menu-toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <ul class="nav-menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Admin</a></li>
-                <li><a href="#">Sleuth</a></li>
-                <li><a href="#">Lucky</a></li>
-                <li>
-                    <a href="#" class="nav-btn">Sign Up</a>
-                </li>
-            </ul>
+          <h1 id="navbar-logo">
+            <a href="index.html">
+              <img
+                src="PAW.png"
+                alt="Pawfessional Logo"
+                width="95px"
+              />
+            </a>
+          </h1>
+          <div
+            class="menu-toggle"
+            id="mobile-menu"
+          >
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
+          <ul class="nav-menu">
+            <li><a href="wendy.html">Lucky</a></li>
+            <li><a href="wade.html">Sleuth</a></li>
+            <li><a href="ross.html">Hot Springs</a></li>
+            <li><a href="Ana.html">Chef Sardine</a></li>
+            <li><a href="maddie.html">Admin</a></li>
+          </ul>
         </nav>
-    </div>
+      </div>
     <div class="anamain">
         <h1>Purr-fect Meals for Furry Clients</h1>
         <div class="header">
