--- a/maddie.html
+++ b/maddie.html
@@ -1,63 +1,97 @@
 <index class="html">
-    <html lang="en">
+  <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pawfessional Enterprises!</title>
-        <link rel="stylesheet" href="maddie.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Pawfessional Enterprises!</title>
+      <link rel="stylesheet" href="maddie.css" />
+      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Nunito"
+      />
     </head>
     <body>
-
-    <header>
-    <h1> From the Office of Mischievousness</h1>
-    </header>
-          
-    <section>
-    <img src="Squirrels/Darlene.png" 
-      alt="A single mom who works 2 jobs" height="25%">
-        <article>
-          <h2>Meet Darlene!</h2>
-        <p>Darlene; the dynamic squirrel who wears many hats as the Chief Executive Mischief Manager of Pawfessional Enterprises. With boundless energy and a knack for organization, Darlene leads her team with wit and charm. From orchestrating acorn heists to coordinating treehouse renovations, there’s never a dull moment with Darlene at the helm. With her bushy tail and sharp mind, she’s the epitome of resourcefulness and agility in the forest.</p>
-    <h3> Education</h3> 
-        <p> Bachelor of Nutology
-                Nutsville University, 
-                Nutsville</p>
-                <p>
-                Specialization in Acorn Procurement and Tree Climbing
-                GPA: 3.8 </p>
-    <h3> Experience</h3> 
-    <p>Tree Ninja, Acorn Enterprises, Nutsville
-       art of stealthily acquiring acorns from neighboring trees.
-                Implemented innovative techniques to bypass bird feeders and squirrel-proof birdhouses.
-                Led a team of fellow squirrels in raiding picnics and stealing snacks from unsuspecting park-goers.</p>
-                <p>
-                Branch Manager, Forest Bank, Nutsville Branch
-                Known for organizing and safeguarding caches of nuts and seeds in various tree branches.</p>
-            </article>
-          </section>
-          
-          <footer>
-    <h1> Meet the team! </h1>
-
-            <div class="team">
-                <div class="images">
-                  <img src="Squirrels/Chaz.png" alt="Snow" style="width:100%"> 
-                  Head of Security
-                </div>
-                <div class="images">
-                  <img src="Squirrels/Elsa.png" alt="Forest" style="width:100%">
-                  Executive Assistant
-                </div>
-                <div class="images">
-                  <img src="Squirrels/Mark.png" alt="Mountains" style="width:100%">
-                  Mark in Accounting
-                </div>
-                <div class="images"><img src="Squirrels/Ronny.png" alt="Mountains" style="width:100%">
-                    Maintenance Technician
-                </div>
-            </div>
-        </footer>
+      <div class="nav-container">
+        <nav class="navbar">
+          <h1 id="navbar-logo">
+            <a href="index.html">
+              <img src="PAW.png" alt="Pawfessional Logo" width="95px" />
+            </a>
+          </h1>
+          <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
+          <ul class="nav-menu">
+            <li><a href="wendy.html">Lucky</a></li>
+            <li><a href="wade.html">Sleuth</a></li>
+            <li><a href="ross.html">Hot Springs</a></li>
+            <li><a href="Ana.html">Chef Sardine</a></li>
+            <li><a href="maddie.html">Admin</a></li>
+          </ul>
+        </nav>
+      </div>
+      <header>
+        <h1>From the Office of Mischievousness</h1>
+      </header>
+<section>
+  <img src="Squirrels/Darlene.png"
+  alt="A single mom who works 2 jobs" width="350" height="350">
+  <article>
+      <h2>Meet Darlene!</h2>
+        <p>
+        Darlene; the dynamic squirrel who wears many hats as the Chief
+        Executive Mischief Manager of Pawfessional Enterprises. With
+        boundless energy and a knack for organization, Darlene leads her
+        team with wit and charm. From orchestrating acorn heists to
+        coordinating treehouse renovations, there’s never a dull moment with
+        Darlene at the helm. With her bushy tail and sharp mind, she’s the
+        epitome of resourcefulness and agility in the forest.
+    </p>
+          <h3>Education</h3>
+          <p>Bachelor of Nutology Nutsville University, Nutsville</p>
+          <p>Specialization in Acorn Procurement and Tree Climbing GPA: 3.8</p>
+          <h3>Experience</h3>
+          <p>
+            Tree Ninja, Acorn Enterprises, Nutsville art of stealthily acquiring
+            acorns from neighboring trees. Implemented innovative techniques to
+            bypass bird feeders and squirrel-proof birdhouses. Led a team of
+            fellow squirrels in raiding picnics and stealing snacks from
+            unsuspecting park-goers.
+          </p>
+          <p>
+            Branch Manager, Forest Bank, Nutsville Branch Known for organizing
+            and safeguarding caches of nuts and seeds in various tree branches.
+          </p>
+        </article>
+      </section>
+      <footer>
+        <h2>Meet the team!</h2>
+        <div class="team">
+          <div class="images">
+            <img src="Squirrels/Chaz.png" alt="Snow" style="width: 100%" />
+            Head of Security
+          </div>
+          <div class="images">
+            <img src="Squirrels/Elsa.png" alt="Forest" style="width: 100%" />
+            Executive Assistant
+          </div>
+          <div class="images">
+            <img src="Squirrels/Mark.png" alt="Mountains" style="width: 100%" />
+            Mark in Accounting
+          </div>
+          <div class="images">
+            <img
+              src="Squirrels/Ronny.png"
+              alt="Mountains"
+              style="width: 100%"
+            />
+            Maintenance Technician
+          </div>
+        </div>
+      </footer>
+      <script src="app.js"></script>
     </body>
   </html>
 </index>
