--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
     <div class="nav-container">
       <nav class="navbar">
         <h1 id="navbar-logo">
-          <img
-            src="PAW.png"
-            alt="Pawfessional Logo"
-            width="95px"
-          />
+          <a href="index.html">
+            <img
+              src="PAW.png"
+              alt="Pawfessional Logo"
+              width="95px"
+            />
+          </a>
         </h1>
         <div
           class="menu-toggle"
@@ -44,17 +46,11 @@
           <span class="bar"></span>
         </div>
         <ul class="nav-menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Admin</a></li>
-          <li><a href="#">Sleuth</a></li>
-          <li><a href="#">Lucky</a></li>
-          <li>
-            <a
-              href="#"
-              class="nav-btn"
-              >Sign Up</a
-            >
-          </li>
+          <li><a href="wendy.html">Lucky</a></li>
+          <li><a href="wade.html">Sleuth</a></li>
+          <li><a href="ross.html">Hot Springs</a></li>
+          <li><a href="Ana.html">Chef Sardine</a></li>
+          <li><a href="maddie.html">Admin</a></li>
         </ul>
       </nav>
     </div>
