--- a/index.html
+++ b/index.html
@@ -19,24 +19,25 @@
         <span class="bar"></span>
       </div>
       <ul class="nav-menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Admin</a></li>
-        <li><a href="#">Sleuth</a></li>
-        <li><a href="#">Lucky</a></li>
-        <li><a href="#" class="nav-btn">Sign Up</a></li>
+        <li><a href="wendy.html">Lucky</a></li>
+        <li><a href="wade.html">Sleuth</a></li>
+        <li><a href="ross.html">Hot Springs</a></li>
+        <li><a href="Ana.html">Chef Sardine</a></li>
+        <li><a href="maddie.html" class="nav-btn">Admin</a></li>
       </ul>
     </nav>
   </div>
   <div class="main">
     <div class="main-container">
       <div class="main-content">
-        <h1>Call in the Pawfessionals!</h1>
+       <h1 class="slogan">Call in the Pawfessionals!</h1>
         <h2>Pawsitively Pawfect Services</h2>
-        <p></p>
-        <button class="btn"><a href="#">Get Started</a></button>
-      </div>
-      <div class="main-img-container">
         <img src="/cat.png" alt="cat with bowtie" id="main-img" width="700px"/>
+      </div>
+      <div class="text">
+        <p>
+          Welcome to Pawfessional Enterprises, where animals take the lead in providing top-notch services for humans! Our unique, animal-run company offers a delightful array of services, all orchestrated by our talented and dedicated animal team. Each service is infused with the charm and expertise of our animal professionals. At Pawfessional Enterprises, we believe in the extraordinary capabilities of our animal colleagues to bring joy, comfort, and unique solutions to your everyday needs. Experience the difference of a service run by animals, for humans.
+        </p>
       </div>
       <div class="testimonials-container">
         <div class="testimonials">
