--- a/wendy.html
+++ b/wendy.html
@@ -77,7 +77,7 @@
         </ul>
       </div>
 
-      <div class="testimonials">
+      <div class="testimonial">
         <h2 class="nunito-bold">What Our Clients Say</h2>
         <p class="nunito-normal">
           "Fantastic experience, the dog made our event special!" -
