--- a/wendy.html
+++ b/wendy.html
@@ -57,8 +57,7 @@
         presence is calming and uplifting, ideal for all settings.
       </p>
       <p class="nunito-normal">
-        <strong>Personality:</strong> Lucky is energetic and loving, great at events,
-         and perfect for family activities, therapy, and learning.
+        <strong>Personality:</strong> Lucky is energetic, enthusiastic and loving.
       </p>
     </div>
 
