resolving css conflicts

--- a/wade.html
+++ b/wade.html
@@ -82,7 +82,7 @@
           </em>
         </div>
       </div>
-      <div class="testimonials">
+      <div class="testimonialsw">
         <h2>Testimonials</h2>
         <div id="test1">
           <img
